# trainHOG

./: CMakeLists.txt  main.cpp
svmlight/: svm_common.c  svm_common.h
